api update on swagger
