# pkg/entities/auth.go
@@ -4,3 +4,8 @@ type Login struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type LoginSchema struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
