# pkg/entities/user.go
@@ -7,3 +7,9 @@ type User struct {
 	Password string `gorm:"not null" json:"password"`
 	Username string `json:"username"`
 }
+
+type CreateUserSchema struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+	Username string `json:"username"`
+}
